# RobotLibrary

./: CMakeLists.txt  README.md
config/: ConfigLoader.h  robot_config.json
examples/: ForwardKinematicsExample.cpp
include/: MathLibrary.h  Robot.h
include/Dynamics/: RecursiveNewtonEuler.h
include/Kinematics/: ForwardKinematics.h
include/RoboticsLibrary/core/: JointParameters.h  Robot.h  RobotParameters.h
include/RoboticsLibrary/kinematics/: ForwardKinematics.h  ForwardKinematics.tpp
include/robotLibrary/collisionDetection/: RobotModel.h  RobotModel.tpp
include/robotLibrary/common/: LinkParameters.h  RobotParameters.h
include/robotLibrary/core/: Robot.h  Robot.tpp
include/robotLibrary/dynamics/: RecursiveNewtonEuler.h  RecursiveNewtonEuler.tpp
include/robotLibrary/kinematics/: ForwardKinematics.h  ForwardKinematics.tpp
include/robotLibrary/math/: MathLibrary.h  MathLibrary.tpp
include/robotLibrary/trajectoryPlanning/: Trajectory.h  TrajectoryPlanner.h  TrajectoryPlanner.tpp  Waypoint.h
src/Kinematics/: ForwardKinematics.cpp
src/core/: Robot.cpp
